# EdgeDetectionViewer

./: README.md  settings.gradle.kts
app/: build.gradle.kts
app/src/androidTest/java/com/example/edgedetection/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gl-renderer.cpp  native-lib.cpp  opencv-processor.cpp
app/src/main/cpp/include/: edge-detection.h
app/src/main/java/com/example/edgedetection/: ImageAnalyzer.kt  MainActivity.kt
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/edgedetection/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
web/: index.html  package.json
web/src/: viewer.ts
